--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>Simple website</title>
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+  <body class="light-theme">
     <h1>Task List</h1>
     <p id="msg">Current tasks:</p>
     <ul>
       <li class="list">Add visual styles</li>
       <li class="list">Add light and dark themes</li>
       <li>Enable switching the theme</li>
+      <div>
+        <button class="btn">Dark</button>
+      </div>
+      <script src="app.js"></script>
+      <noscript>You need to enable JavaScript</noscript>
     </ul>
   </body>
 </html>
